--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -16,13 +16,60 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#">Meny1</a></li> 
-                    <li><a href="#">Meny2</a></li>
-                    <li><a href="#">Meny3</a></li>
-                    <li><a href="#">Meny4</a></li>
-                    <li><a href="#">Meny5</a></li>
-                </ul>
-            </nav>
+                <li><a href="#">meny1</a>
+                    <ul>
+                            <li><a href="#">Friends:<span> no friend</span></a></li>
+                            <li><a href="#">With<span> me</span></a></li>
+                            <li><a href="#">Benefits <span> with friends</span></a></li>
+                            <li><a href="#">max<span> good friend</span></a></li>
+                            <li><a href="#">sorensen<span> sörensen</span></a>
+                        <ul>
+                            <li><a href="#">Ett<span> tusen</span></li>
+                            <li><a href="#">Två<span> tusen</span></li>
+                            <li><a href="#">Tre<span> tusen</span></li>
+                            <li><a href="#">Fyra<span> tusen</span></li>
+                          
+                        </ul>
+                    </ul>
+                </li>
+                <li><a href="#">meny2</a>
+                    <ul>
+                            <li><a href="#">A<span> 30</span></a></li>
+                            <li><a href="#">B<span> 40</span></a></li>
+                            <li><a href="#">C<span> 50</span></a></li>
+                            <li><a href="#">D<span> 60</span></a></li>
+                            <li><a href="#">E<span> 70</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="#">meny3</a>
+                    <ul>
+                            <li><a href="#">A<span>no friend</span></a></li>
+                            <li><a href="#">A<span>no friend</span></a></li>
+                            <li><a href="#">A<span>no friend</span></a></li>
+                            <li><a href="#">A<span>no friend</span></a></li>
+                            <li><a href="#">A<span>no friend</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="#">meny4</a>
+                    <ul>
+                            <li><a href="#">1<span> 234</span></a></li>
+                            <li><a href="#">2<span> 345</span></a></li>
+                            <li><a href="#">3<span> 345</span></a> 456</li>
+                            <li><a href="#">4<span> 345</span></a> 567</li>
+                            <li><a href="#">5<span> 345</span></a> 678</li>
+                    </ul>
+                </li>
+                <li><a href="#">meny5</a>
+                    <ul>
+                            <li><a href="#">1<span> 234</span></a></li>
+                            <li><a href="#">2<span> 345</span></a></li>
+                            <li><a href="#">3<span> 456</span></a></li>
+                            <li><a href="#">4<span> 567</span></a></li>
+                            <li><a href="#">5<span> 678</span></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
             <div class="logo">
                 <h2>ex1</h2> 
                 <h3>ex2</h3>
@@ -34,9 +81,6 @@
         <section>
             <!-- href gör rubriken klickbar -->
             
-                <!-- Header innehåller rubrik.
-                   Div innehåller texten som skrivits.
-                   Footer visar information längst nere på sidan -->
                 <article class="syndicate">
                         <a href="#">
                     <header>
@@ -131,6 +175,62 @@
                                     </div>
                                 <footer>
                                     <p>Date: 5 jun</p>
+                                </footer>
+                            </a>
+                            </article>
+                            <article class="syndicate">
+                                    <a href="#">
+                                <header>
+                                    <h3>Blog Article 6</h3>
+                                </header>
+                                    <div>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </p>
+                                    </div>
+                                <footer>
+                                    <p>Date 6 jun</p>
+                                </footer>
+                            </a>
+                            </article>
+
+                            <article class="syndicate">
+                                    <a href="#">
+                                <header>
+                                    <h3>Blog Article 7</h3>
+                                </header>
+                                    <div>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </p>
+                                    </div>
+                                <footer>
+                                    <p>Date 7 jun</p>
+                                </footer>
+                            </a>
+                            </article>
+
+                            <article class="syndicate">
+                                    <a href="#">
+                                <header>
+                                    <h3>Blog Article 8</h3>
+                                </header>
+                                    <div>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </p>
+                                    </div>
+                                <footer>
+                                    <p>Date 8 jun</p>
                                 </footer>
                             </a>
                             </article>
