--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -14,6 +14,9 @@
     <body>
         <!-- Header innehåller logo och meny -->
         <header>
+            <input type="checkbox" id="nav-toggle">
+            <div id=wrapper">
+                <label for="nav-toggle">&#9776 SAAB</label>
             <nav>
                 <ul>
                 <li><a href="#">meny1</a>
@@ -70,6 +73,7 @@
                 </li>
             </ul>
         </nav>
+            </div>
             <div class="logo">
                 <h2>ex1</h2> 
                 <h3>ex2</h3>
