--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -15,7 +15,7 @@
         <!-- Header innehåller logo och meny -->
         <header>
             <input type="checkbox" id="nav-toggle">
-            <div id=wrapper">
+            <div id="wrapper">
                 <label for="nav-toggle">&#9776 SAAB</label>
             <nav>
                 <ul>
