--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -56,9 +56,9 @@
                     <ul>
                             <li><a href="#">1<span> 234</span></a></li>
                             <li><a href="#">2<span> 345</span></a></li>
-                            <li><a href="#">3<span> 345</span></a> 456</li>
-                            <li><a href="#">4<span> 345</span></a> 567</li>
-                            <li><a href="#">5<span> 345</span></a> 678</li>
+                            <li><a href="#">3<span> 345</span></a></li>
+                            <li><a href="#">4<span> 345</span></a></li>
+                            <li><a href="#">5<span> 345</span></a></li>
                     </ul>
                 </li>
                 <li><a href="#">meny5</a>
