--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -13,12 +13,17 @@
     <body>
         <!-- Header innehåller logo och meny -->
         <header>
+            <!-- Checkbox för att öppna menyn i mobilen -->
             <input type="checkbox" id="nav-toggle">
             <div id="wrapper">
+                <!--  meny text -->
                 <label for="nav-toggle">&#9776 SAAB</label>
             <nav>
                 <ul>
-                <li><a href="#">meny1</a>
+                <li>
+                     <!-- huvudmeny -->
+                    <a href="#">meny1</a>
+                     <!-- undremeny -->
                     <ul>
                             <li><a href="#">Friends:<span> no friend</span></a></li>
                             <li><a href="#">With<span> me</span></a></li>
