--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/Inlamning3.html
@@ -19,63 +19,55 @@
                 <!--  meny text -->
                 <label for="nav-toggle">&#9776 SAAB</label>
             <nav>
-                <ul>
-                <li>
-                     <!-- huvudmeny -->
-                    <a href="#">meny1</a>
-                     <!-- undremeny -->
                     <ul>
-                            <li><a href="#">Friends:<span> no friend</span></a></li>
-                            <li><a href="#">With<span> me</span></a></li>
-                            <li><a href="#">Benefits <span> with friends</span></a></li>
-                            <li><a href="#">max<span> good friend</span></a></li>
-                            <li><a href="#">sorensen<span> sörensen</span></a>
-                        <ul>
-                            <li><a href="#">Ett<span> tusen</span></li>
-                            <li><a href="#">Två<span> tusen</span></li>
-                            <li><a href="#">Tre<span> tusen</span></li>
-                            <li><a href="#">Fyra<span> tusen</span></li>
-                          
+                            <li>
+                                <!-- huvudmeny -->
+                                <a href="#">Meny1</a>
+                                <!-- undermeny -->
+                                <ul>
+                                    <li><a href="#">max<span>1</span></a></li>
+                                    <li><a href="#">max<span>2</span></a></li>
+                                    <li><a href="#">max<span>3</span></a></li>
+                                    <li>
+                                        <!-- undermeny på undermenyn -->
+                                        <a href="#">MAX undermeny<span>4</span></a>
+                                        <ul>
+                                            <li><a href="#">maxi<span>4</span></a></li>
+                                            <li><a href="#">maxi<span>5</span></a></li>
+                                            <li><a href="#">maxi<span>6</span></a></li>
+                                            <li><a href="#">maxi<span>7</span></a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Meny2</a>
+                                <ul>
+                                    <li><a href="#">maxi<span>8</span></a></li>
+                                    <li><a href="#">maxi<span>9</span></a></li>
+                                    <li><a href="#">maxi<span>10</span></a></li>
+                                    <li><a href="#">maxi<span>11</span></a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Meny3</a>
+                                <ul>
+                                    <li><a href="#">maxi<span>12</span></a></li>
+                                    <li><a href="#">maxi<span>13</span></a></li>
+                                    <li><a href="#">maxi<span>14</span></a></li>
+                                    <li><a href="#">maxi<span>15</span></a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Meny4</a>
+                                <ul>
+                                    <li><a href="#">maxi<span>16</span></a></li>
+                                    <li><a href="#">maxi<span>17</span></a></li>
+                                    <li><a href="#">maxi<span>18</span></a></li>
+                                    <li><a href="#">maxi<span>19</span></a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </ul>
-                </li>
-                <li><a href="#">meny2</a>
-                    <ul>
-                            <li><a href="#">A<span> 30</span></a></li>
-                            <li><a href="#">B<span> 40</span></a></li>
-                            <li><a href="#">C<span> 50</span></a></li>
-                            <li><a href="#">D<span> 60</span></a></li>
-                            <li><a href="#">E<span> 70</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#">meny3</a>
-                    <ul>
-                            <li><a href="#">A<span>no friend</span></a></li>
-                            <li><a href="#">A<span>no friend</span></a></li>
-                            <li><a href="#">A<span>no friend</span></a></li>
-                            <li><a href="#">A<span>no friend</span></a></li>
-                            <li><a href="#">A<span>no friend</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#">meny4</a>
-                    <ul>
-                            <li><a href="#">1<span> 234</span></a></li>
-                            <li><a href="#">2<span> 345</span></a></li>
-                            <li><a href="#">3<span> 345</span></a></li>
-                            <li><a href="#">4<span> 345</span></a></li>
-                            <li><a href="#">5<span> 345</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#">meny5</a>
-                    <ul>
-                            <li><a href="#">1<span> 234</span></a></li>
-                            <li><a href="#">2<span> 345</span></a></li>
-                            <li><a href="#">3<span> 456</span></a></li>
-                            <li><a href="#">4<span> 567</span></a></li>
-                            <li><a href="#">5<span> 678</span></a></li>
-                    </ul>
-                </li>
-            </ul>
         </nav>
             </div>
             <div class="logo">
