--- a/HTMLCSS3_SEO/Inlamningar/Inlamning4/Inlamning4.html
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning4/Inlamning4.html
@@ -69,7 +69,7 @@
                                 </ul>
                             </li>
                         </ul>
-        </nav>
+                </nav>
         </header>
 <section class="section">
     <article class="article flexcard1">
@@ -161,6 +161,7 @@
                 <i class="fa fa-address-book" aria-hidden="true"></i>
             </div>
         </footer>
-    </article>
-    </body>
+      </article>
+    </section>
+   </body>
 </html>
